Closed Bug 1254275 Opened 9 years ago Closed 9 years ago

Scroll snapping on OS X touchpads doesn't snap if the fingers are lifted without any momentum.

Categories

(Core :: Panning and Zooming, defect)

All
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla48
Tracking Status
firefox46 --- wontfix
firefox47 --- verified
firefox48 --- verified

People

(Reporter: mstange, Assigned: mstange)

References

Details

(Keywords: correctness, regression, Whiteboard: [gfx-noted])

Attachments

(1 file)

STR: 1. Be on OS X with a touchpad or a magic mouse. 2. Load http://jsbin.com/pikusa/edit?html,css,output 3. Over the cat picture, scroll to the right until you're halfway between two cats, pause, and lift your fingers. Now the scroll box stays in the in-between state and doesn't snap. Snapping with momentum works fine.
Blocks: apz-desktop
Keywords: correctness
Whiteboard: [gfx-noted]
I can repro on aurora as well.
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Comment on attachment 8733175 [details] MozReview Request: Bug 1254275 - Inspect the event queue to find out whether momentum events are following. r?kats https://reviewboard.mozilla.org/r/41621/#review38153 ::: gfx/layers/apz/src/AsyncPanZoomController.cpp:2000 (Diff revision 1) > > SetState(NOTHING); > RequestContentRepaint(); > > + if (!aEvent.mFollowedByMomentum) { > + RequestSnapToDestination(); It's probably better to call RequestSnap() here, rather than RequestSnapToDestination(), since we aren't going to be doing an animation, and there's no need to compute the predicted destination.
Attachment #8733175 - Flags: review?(bugmail.mozilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Uplift to 47?
Flags: needinfo?(mstange)
Comment on attachment 8733175 [details] MozReview Request: Bug 1254275 - Inspect the event queue to find out whether momentum events are following. r?kats Approval Request Comment [Feature/regressing bug #]: APZ and possibly bug 1235994 [User impact if declined]: Unreliable scroll snapping with Mac touchpads [Describe test coverage new/current, TreeHerder]: no coverage for snapping in response to touchpad events [Risks and why]: low [String/UUID change made/needed]: none
Flags: needinfo?(mstange)
Attachment #8733175 - Flags: approval-mozilla-aurora?
Comment on attachment 8733175 [details] MozReview Request: Bug 1254275 - Inspect the event queue to find out whether momentum events are following. r?kats APZ related, Aurora47+
Attachment #8733175 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Verified as fixed un\sing Firefox 47 beta 6 and latest Aurora 48.0a2 under Mac OS X 10.9.5 retina with touchpad.
Status: RESOLVED → VERIFIED
Blocks: 1749352
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: