Bug 1254275 - Inspect the event queue to find out whether momentum events are following. r=kats a=ritu

MozReview-Commit-ID: 6k3SaJ6X7Mr

--HG--
extra : source : dc4afd0b762634e6b1edb806e0749e69cbecc968