gfx/layers/apz/src/AsyncPanZoomController.cpp
@@ -1992,6 +1992,10 @@ nsEventStatus AsyncPanZoomController::OnPanEnd(const PanGestureInput& aEvent) {
   SetState(NOTHING);
   RequestContentRepaint();
 
+  if (!aEvent.mFollowedByMomentum) {
+    RequestSnap();
+  }
+
   return nsEventStatus_eConsumeNoDefault;
 }
 
